# vm

./: .gitignore  Cargo.toml  README.md  build.rs  compile.sh  dump.sh  encrypt_password.toml  note.md  obfuscate.sh  password.asm  poc.asm  readme.md  report.md  strip_binary.py  test.asm  vm_crackme
hide-macro/: Cargo.toml
hide-macro/src/: lib.rs
obfuscated_code/: VM.rs  build.rs
obfuscator-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LLVMBuild.cmake
obfuscator-build/include/llvm/Config/: config.h
obfuscator-build/tools/llvm-config/: BuildVariables.inc  LibraryDependencies.inc
src/: crypto_helpers.rs  main.rs  vm_runtime.rs
src/platform/: linux.rs  macos.rs
src/vm/: OP.rs  RAM.rs  VM.rs  mod.rs
vm-bin/: Cargo.toml  build.rs
vm-bin/src/: crypto_helpers.rs  main.rs  vm_runtime.rs
vm-bin/src/platform/: linux.rs
vm-core/: Cargo.toml
vm-core/src/vm/: OP.rs  RAM.rs  VM.rs  mod.rs
vm-db/: Cargo.toml
vm-db/src/: breakpoint.rs  debugger.rs  debugger_cmds.rs  lib.rs  main.rs  memory_view.rs  session.rs  vm.rs
