[package]
name = "vm_crackme"
version = "0.1.0"
edition = "2024"

[build-dependencies]
chacha20 = "0.9"

[dependencies]
cryptify = "3.2.1"
hide-macro = { path = "./hide-macro" }
zeroize = "1.8.2"
chacha20 = "0.9"
rust_code_obfuscator = "0.3.0"
libc = "0.2.186"

[features]
default = []

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
incremental = true

[profile.release-obfuscated]
inherits = "release"
# Additional settings for obfuscation if needed
